--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://YuriyPilipenkoKH.github.io/api-sevices",
   "scripts": {
     "start": "parcel src/*.html",
+    "watch": "parcel src/*.html --open --port 4000",
     "build": "parcel build src/*.html --public-url /api-sevices/"
   },
   "repository": {
