--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@compiled/parcel-transformer": "^0.12.1",
     "axios": "^1.3.4",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
