--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@compiled/parcel-transformer": "^0.12.1",
     "axios": "^1.3.4",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
     "prettier": "^2.8.7",
